--- a/game.project
+++ b/game.project
@@ -2,7 +2,7 @@
 title = LGP_PGame
 
 [bootstrap]
-main_collection = /game/game.collectionc
+main_collection = /main/main.collectionc
 
 [input]
 game_binding = /input/game.input_bindingc
