--- a/game.project
+++ b/game.project
@@ -1,16 +1,16 @@
 [project]
-title = LGP_PGame
+title = Platformer game-2
 
 [bootstrap]
-main_collection = /main/main.collectionc
+main_collection = /game/game.collectionc
 
 [input]
 game_binding = /input/game.input_bindingc
 use_accelerometer = 0
 
 [display]
-width = 1024
-height = 768
+width = 960
+height = 640
 
 [ios]
 app_icon_120x120 = /assets/app_icons/icon_120.png
