--- a/game.project
+++ b/game.project
@@ -1,5 +1,6 @@
 [project]
 title = LGP_PGame
+compress_archive = 1
 
 [bootstrap]
 main_collection = /game/game.collectionc
@@ -42,7 +43,7 @@ shared_state = 1
 [physics]
 gravity_y = -1000.0
 scale = 0.01
-debug = 1
+debug = 0
 max_collisions = 200
 
 [tilemap]
